; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/extr_if_ath_tx.c_ath_tx_tid_can_tx_or_sched.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/extr_if_ath_tx.c_ath_tx_tid_can_tx_or_sched.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_softc = type { i32 }
%struct.ath_tid = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ath_softc*, %struct.ath_tid*)* @ath_tx_tid_can_tx_or_sched to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ath_tx_tid_can_tx_or_sched(%struct.ath_softc* %0, %struct.ath_tid* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ath_softc*, align 8
  %5 = alloca %struct.ath_tid*, align 8
  store %struct.ath_softc* %0, %struct.ath_softc** %4, align 8
  store %struct.ath_tid* %1, %struct.ath_tid** %5, align 8
  %6 = load %struct.ath_softc*, %struct.ath_softc** %4, align 8
  %7 = call i32 @ATH_TX_LOCK_ASSERT(%struct.ath_softc* %6)
  %8 = load %struct.ath_tid*, %struct.ath_tid** %5, align 8
  %9 = getelementptr inbounds %struct.ath_tid, %struct.ath_tid* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp sgt i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %22

15:                                               ; preds = %2
  %16 = load %struct.ath_tid*, %struct.ath_tid** %5, align 8
  %17 = getelementptr inbounds %struct.ath_tid, %struct.ath_tid* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %22

21:                                               ; preds = %15
  store i32 1, i32* %3, align 4
  br label %22

22:                                               ; preds = %21, %20, %14
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @ATH_TX_LOCK_ASSERT(%struct.ath_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
